<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/main_screen_main_layout_padding"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_screen_image_height"
            android:contentDescription="@string/image"
            android:src="@drawable/mainlogo"
            android:scaleType="fitXY"/>

        <!-- Boton Start-->
        <LinearLayout
            android:id="@+id/llStart"
            android:layout_width="@dimen/start_button_size"
            android:layout_height="@dimen/start_button_size"
            android:layout_marginTop="@dimen/start_button_margin_top"
            android:gravity="center"
            android:background="@drawable/item_color_accent_border_ripple_background"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/start_button_label_textsize"
                />

        </LinearLayout>

        <!-- Linear layout de botones secundarios -->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white">

            <!-- Boton Calculator -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="50dp">
            <LinearLayout
                android:id="@+id/llBMI"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="22sp"/>
            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/calculator"
                    android:textColor="@color/blue_accent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- Boton History -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="50dp">
            <LinearLayout
                android:id="@+id/llHistory"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">
                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/history" />
            </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/history"
                    android:textColor="@color/blue_accent"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


        <!--Radiogroup para seleccion de nivel -->
        <LinearLayout
            android:id="@+id/llLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/rgLevels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/drawable_radio_group_levels"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbLevelOne"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_rb_level_selector"
                    android:checked="true"
                    android:text="@string/level_1"
                    android:gravity="center"
                    android:textColor="@drawable/drawable_units_tab_text_color_selector"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:button="@null"/>
                <RadioButton
                    android:id="@+id/rbLevelTwo"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_rb_level_selector"
                    android:checked="false"
                    android:text="@string/level_2"
                    android:gravity="center"
                    android:textColor="@drawable/drawable_units_tab_text_color_selector"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:button="@null"/>
                <RadioButton
                    android:id="@+id/rbLevelThree"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_rb_level_selector"
                    android:checked="false"
                    android:text="@string/level_3"
                    android:gravity="center"
                    android:textColor="@drawable/drawable_units_tab_text_color_selector"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:button="@null"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>