<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">


<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.BMIActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"/>



    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_bmi_activity"
        android:layout_margin="10dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal">



        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_accent"
            android:background="@drawable/drawable_units_tab_selector"
            android:checked="true"
            android:text="@string/metric_units"
            android:gravity="center"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/rbImperialUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_accent"
            android:background="@drawable/drawable_units_tab_selector"
            android:checked="false"
            android:text="@string/imperial_units"
            android:gravity="center"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:button="@null"/>

    </RadioGroup>

    <!--Linear Layout for Weight and Height input information -->
    <LinearLayout
        android:id="@+id/llUnitsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rgUnits"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-4193581455913262/4352037347"
            />

        <!--Text Input Layout for Metric Units Weight -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricUnitWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:inputType="numberDecimal"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Text Input Layout for Metric Units Height -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricUnitHeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricUnitHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_in_cm"
                android:inputType="numberDecimal"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Text Input Layout for Imperial Units Weight -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilImperialUnitWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etImperialUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_lbs"
                android:inputType="numberDecimal"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Linear Layout for Height input information in Imperial units-->
        <LinearLayout
            android:id="@+id/llImperialUnitsHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <!--Text Input Layout for Feet -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilImperialUnitHeightFeet"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etImperialUnitHeightFeet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/feet"
                    android:inputType="number"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Text Input Layout for Inches -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilImperialUnitHeightInch"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etImperialUnitHeightInch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inch"
                    android:inputType="number"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!--Linear Layout for BMI information -->
        <LinearLayout
            android:id="@+id/llDisplayBMIResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvYourBMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/your_bmi"
                android:textAllCaps="true"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvBMIValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="15.00"/>

            <TextView
                android:id="@+id/tvBMIType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="Normal"/>

            <TextView
                android:id="@+id/tvBMIDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="Normal"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnCalculateUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/blue_accent"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>